Mon Mar  8 16:02:05 UTC 2010  Abdul Sowayan  <sowayan@gmail.com>

        * tests/Bug_3834_Regression/CompB_exec.h:
        * tests/Bug_3834_Regression/CompB_exec.cpp:

          Fixed a typo that caused issues on Windows based platforms.

Mon Mar  8 15:20:43 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/OMG-CCM-Tutorial.ppt:
          List AMI4CCM pragma's

Mon Mar  8 15:15:41 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/DoubleNestedModule/Connector/DNM_Connector.idl:
        * connectors/dds4ccm/tests/DoubleNestedModule/Sender/DNM_Sender.idl:
        * connectors/dds4ccm/tests/DoubleNestedModule/Sender/DNM_Sender_exec.h:
        * connectors/dds4ccm/tests/DoubleNestedModule/Sender/DNM_Sender_exec.cpp:
          Created nested modules for Connector and Sender as well. Placed them in
          totally different namespaces.

Mon Mar  8 14:40:43 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dds4ccm/tests/DoubleNestedModule/Sender/DNM_Sender.mpc:
          enabled exec

        * dds4ccm/tests/DoubleNestedModule/Sender/DNM_Sender_exec.cpp:
          Fixed compile problem

Mon Mar  8 13:58:26 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/DoubleNestedModule:
        * connectors/dds4ccm/tests/DoubleNestedModule/Base:
        * connectors/dds4ccm/tests/DoubleNestedModule/Base/DNM_Base.idl:
        * connectors/dds4ccm/tests/DoubleNestedModule/Base/DNM_Base.mpc:
        * connectors/dds4ccm/tests/DoubleNestedModule/Connector:
        * connectors/dds4ccm/tests/DoubleNestedModule/Connector/DNM_Connector.idl:
        * connectors/dds4ccm/tests/DoubleNestedModule/Connector/DNM_Connector.mpc:
        * connectors/dds4ccm/tests/DoubleNestedModule/Sender:
        * connectors/dds4ccm/tests/DoubleNestedModule/Sender/DNM_Sender.idl:
        * connectors/dds4ccm/tests/DoubleNestedModule/Sender/DNM_Sender.mpc: