@@ -1,3 +1,8 @@
+Mon Mar  8 16:26:43 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * connectors/dds4ccm/impl/dds/DDS4CCM_Traits.h:
+          Moved type traits outside of NDDS namespace
+
 Mon Mar  8 16:02:05 UTC 2010  Abdul Sowayan  <sowayan@gmail.com>
 
         * tests/Bug_3834_Regression/CompB_exec.h:
